collector/envoy/service-envoy.yaml
# see: https://github.com/envoyproxy/envoy/tree/v1.23.0/examples/front-proxy

static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          tracing:
            verbose: true
            provider:
              # Envoy v1.23.0 and later OpenTelemetry-based tracing configuration
              name: envoy.tracers.opentelemetry
              typed_config:
                "@type": type.googleapis.com/envoy.config.trace.v3.OpenTelemetryConfig
                grpc_service:
                  envoy_grpc:
                    cluster_name: local_collector
                  initial_metadata:
                    - key: lightstep-access-token
                      value: "set-in-collector"
                service_name: service-envoy
          route_config:
            name: local_route
            virtual_hosts:
            - name: service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/service"
                route:
                  cluster: local_service
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: local_service
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: local_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8080
  - name: local_collector
    connect_timeout: 40s
    type: strict_dns
    lb_policy: least_request
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {} # enable H2 protocol
    load_assignment:
      cluster_name: local_collector
      endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: otel-collector
                  port_value: 4317
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081
